Ya casi está lo de los tipos de datos y Monad

--- a/tipos_de_datos.ipynb
+++ b/tipos_de_datos.ipynb
@@ -19,17 +19,26 @@
     }
    },
    "source": [
-    "## Enumeraciones\n",
-    "\n",
+    "## Enumeraciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "En Haskell podemos crear un tipo de datos, similar a un `enum` de C, de la siguiente manera:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -42,7 +51,7 @@
    "execution_count": 2,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -59,14 +68,23 @@
     }
    },
    "source": [
-    "## Tipos de datos algebraicos\n",
-    "\n",
+    "## Tipos de datos algebraicos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "En Haskell podemos construir los llamados _tipos de datos algebraicos_ usando la palabra clave `data`. Por ejemplo, podemos definir un tipo de dato `ListInt` de la siguiente manera, recursivamente:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -81,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -90,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -99,7 +117,7 @@
    "outputs": [],
    "source": [
     "xs :: ListInt\n",
-    "xs = Cons 1 (Cons 2 (Cons 3 Nil))"
+    "xs = Cons 1 (Cons 2 (Cons 3 Nil)) -- [1,2,3]"
    ]
   },
   {
@@ -115,10 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -130,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -153,7 +171,7 @@
    "execution_count": 7,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -170,8 +188,17 @@
     }
    },
    "source": [
-    "## _Type variables_\n",
-    "\n",
+    "## _Type variables_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "Podemos hacer los tipos de datos para la lista y para el árbol más genéricos y agregar \"variables de tipo\", de forma que puedan almacenar datos de cualquier tipo, y no sólo `Int`:"
    ]
   },
@@ -192,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -240,7 +267,7 @@
    "execution_count": 5,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -253,7 +280,7 @@
    "execution_count": 9,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -266,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -278,7 +305,7 @@
    "execution_count": 12,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -290,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -429,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -440,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -464,14 +491,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "Definimos Point, y lo hacemos instancia de `Eq`, diciendo que dos `Point x y` son \"iguales\" si están a la misma distancia del `Point 0 0`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -479,43 +510,18 @@
    },
    "outputs": [],
    "source": [
-    "data Point = Point Int Int"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "data Point = Point Int Int\n",
+    "\n",
     "instance Eq Point where\n",
     "     (Point x1 y1) == (Point x2 y2) = (x1^2 + y1^2) == (x2^2 + y2^2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "first = Point 1 0\n",
-    "second = Point 1 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
     }
    },
    "outputs": [
@@ -530,29 +536,15 @@
     }
    ],
    "source": [
-    "first == second"
+    "Point 1 0 == Point 1 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "first = Point 1 0\n",
-    "second = Point 0 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
     }
    },
    "outputs": [
@@ -567,14 +559,25 @@
     }
    ],
    "source": [
-    "first == second"
+    "Point 1 0 == Point 1 0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## _Deriving_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -731,6 +734,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Haskell",
    "language": "haskell",
