Termino funciones de orden superior y currificadas. Agrego recursividad

--- a/Funciones de Orden Superior.ipynb
+++ b/Funciones de Orden Superior.ipynb
@@ -4,7 +4,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparando un poco con java"
+    "<img src=\"haskell-logo.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recursividad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importante en Haskell por ser un lenguaje funcional. No se declara como hacer las cosas sino como son las cosas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo de maximo de una lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "maxim :: (Ord a) => [a] -> a\n",
+    "maxim [] = error \"Máximo de una lista vacía\"\n",
+    "maxim [x] = x\n",
+    "maxim (x:xs)\n",
+    "    | x > maxTail = x\n",
+    "    | otherwise   = maxTail\n",
+    "    where maxTail = maxim xs\n",
+    "\n",
+    "main = print (maxim ['a', 'b', 'z','f', 'h'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 'z'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Otro ejemplo: funcion repl. Recibe un numero n y un dato tipo Ord. Devuelve una lista del dato tipo Ord replicado n veces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "repl :: (Num i, Ord i) => i -> a -> [a]\n",
+    "repl n x\n",
+    "    | n <= 0    = []\n",
+    "    | otherwise = x:repl (n-1) x\n",
+    "\n",
+    "main = print(repl 5 \"Haskell\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [\"Haskell\",\"Haskell\",\"Haskell\",\"Haskell\",\"Haskell\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparando con java"
    ]
   },
   {
@@ -17,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "package com.java2novice.sorting;\n",
@@ -100,13 +186,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "qsort []     = []\n",
-    " qsort (x:xs) = qsort less ++ [x] ++ qsort more\n",
-    "     where less = filter (<x)  xs\n",
-    "           more = filter (>=x) xs"
+    "quicksort :: (Ord a) => [a] -> [a]\n",
+    "quicksort [] = []\n",
+    "quicksort (x:xs) =\n",
+    "    let smallerSorted = quicksort [a | a <- xs, a <= x]\n",
+    "        biggerSorted  = quicksort [a | a <- xs, a > x]\n",
+    "    in  smallerSorted ++ [x] ++ biggerSorted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Funciones currificadas\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cada funcion de Haskell puede tomar solo un parametro. Como hacemos para llamar a una funcion con mas de un parametro? Currificamos la funcion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo: multiplicacion de 3 argumentos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "multThree :: (Num a) => a -> a -> a -> a\n",
+    "multThree x y z = x * y * z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Se puede leer como que multThree toma una funcion que recibe un numero y devuelve otro numero. Luego esa funcion recibe otro numero y devuelve otro numero (la multiplicacion de los 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pasando en limpio...se van componiendo funciones que reciben un numero y devuelven otra funcion que a su vez recibe un numero y devuelve otro. Redefiniendo..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "multThree :: (Num a) => a -> (a -> (a -> a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Beneficios? Si llamamos a una funcion con parametros de menos, obtenemos una funcion parcialmente aplicada, que puede ser utilizada para crear otra funcion. \n",
+    "\n",
+    "## Ejemplo: creemos una funcion que recibe dos numeros y los multiplica por 9, utilizando la funcion multThree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "multThree :: (Num a) => a -> a -> a -> a\n",
+    "multThree x y z = x * y * z\n",
+    "\n",
+    "let multTwoWithNine = multThree 9\n",
+    "multTwoWithNine 2 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Esto sienta las bases para definir lo que son las funciones de orden superior"
    ]
   },
   {
@@ -120,14 +299,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Currificado\n"
+    "### Como vimos recien, las funciones pueden tomar funciones como parametros y devolver otras funciones.\n",
+    "\n",
+    "### Ejemplo: applyTwice recibe una funcion y un numero, y devuelve la doble aplicacion del numero a la funcion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "applyTwice :: (a -> a) -> a -> a\n",
+    "applyTwice f x = f (f x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Funciones Lambda"
+    "### Utilizando la funcion multThree que habiamos definido antes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "applyTwice :: (a -> a) -> a -> a\n",
+    "applyTwice f x = f (f x)\n",
+    "\n",
+    "multThree :: (Num a) => a -> a -> a -> a\n",
+    "multThree x y z = x * y * z\n",
+    "\n",
+    "main = print( applyTwice (multThree 2 2) 3) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( multThree 2 2 ) es una funcion que recibe un numero y lo multiplica por 4. Por lo tanto, el resultado nos da 48"
    ]
   }
  ],
@@ -147,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
