Arreglo un par de cosas

--- a/funciones_de_orden_superior.ipynb
+++ b/funciones_de_orden_superior.ipynb
@@ -8,12 +8,12 @@
     }
    },
    "source": [
-    "# Tipado fuerte"
+    "# Tipado fuerte y estático"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
