--- a/tipos_de_datos_algebraicos.ipynb
+++ b/tipos_de_datos_algebraicos.ipynb
@@ -105,7 +105,7 @@
     }
    },
    "source": [
-    "El constructor `Node` recibe tres parámetros:\n",
+    "El constructor `Node` recibe tres argumentos:\n",
     "* hijo izquierdo (`TreeInt`)\n",
     "* valor (`Int`)\n",
     "* hijo derecho (`TreeInt`)"
@@ -262,12 +262,12 @@
     }
    },
    "source": [
-    "Podemos hacer los tipos de datos más \"genéricos\" con __variables de tipo__ (_type variables_):"
+    "Podemos hacer tipos de datos \"genéricos\" o \"polimórficos\" con __variables de tipo__ (_type variables_):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -908,6 +908,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Pasamos de `Tree Int` a `Tree String`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -1268,7 +1279,7 @@
    "source": [
     "#### ¿Cómo podemos combinar las dos operaciones y concatenar los logs?\n",
     "\n",
-    "Primero creamos una función `fmapW` que nos permite aplicar otra función a un resultado de tipo `(Double, Log)`, sólo al `Double`, y dejando el `Log` intacto:"
+    "Primero creamos una función `fmapW` que nos permite aplicar otra función a un `(Int, Log)`, sólo al `Int`, y dejando el `Log` intacto:"
    ]
   },
   {
@@ -1386,21 +1397,9 @@
     }
    },
    "source": [
-    "Nosotros buscamos que quede `(100,[\"Mas 5\",\"Al cuadrado\"])`. Para esto, creamos la función `joinW`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "joinW :: ((Int, Log), Log) -> (Int, Log)\n",
-    "joinW ((x,s),ss) = (x, ss ++ s)"
+    "Queremos que quede `(100,[\"Mas 5\",\"Al cuadrado\"])`... \n",
+    "\n",
+    "Para esto, creamos la función `joinW`:"
    ]
   },
   {
@@ -1424,6 +1423,20 @@
    ],
    "source": [
     "fmapW fLog r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "joinW :: ((Int, Log), Log) -> (Int, Log)\n",
+    "joinW ((x,s),ss) = (x, ss ++ s)"
    ]
   },
   {
