Agrego intro, historia, caso de uso al informe

--- a/informe.ipynb
+++ b/informe.ipynb
@@ -2,6 +2,104 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introducción"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Haskell es un lenguaje de programación estandarizado multi-propósito puramente funcional con semánticas no estrictas y fuerte tipificación estática. Su nombre se debe al lógico estadounidense Haskell Curry, debido a su aporte al cálculo lambda, el cual tiene gran influencia en el lenguaje.\n",
+    "\n",
+    "El cálculo lambda es un sistema formal diseñado para investigar la definición de función, la noción de aplicación de funciones y la recursión. Aunque es una abstracción matemática y no un lenguaje de programación, ha formado la base de casi todos los lenguajes funcionales."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Historia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En 1987 se realizo una reunion con el objetivo de discutir la desafortunada situación que atravesaba la comunidad de lenguajes de programación funcional: existı́a más de una docena de lenguajes puros y no estrictos, todos muy similares en poder expresivo y semántico, y el uso más extenso de esta clase de lenguajes estaba siendo obstaculizado por la carencia de un lenguaje común.\n",
+    "\n",
+    "Lo primerofue establecer los siguientes objetivos para el lenguaje:\n",
+    "- Debı́a ser adecuado para la enseñanza, la investigación y el desarrollo de grandes aplicaciones.\n",
+    "- Debı́a ser completamente descripto a través de la publicación de una sintaxis formal y una semántica.\n",
+    "- Debı́a ser disponible libremente. Debı́a permitirse que cualquier persona pudiera implementar el lenguaje y distribuirlo a quien quisiera.\n",
+    "- Debı́a poder ser usado como base para la investigación de lenguajes.\n",
+    "- Debı́a estar basado en ideas que gozaran de un consenso considerable.\n",
+    "- Debı́a reducir la innecesaria diversidad entre los lenguajes funcionales."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Qué se necesita para programar en Haskell?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GHC (compilador e interprete) instalación en Ubuntu:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ sudo apt-get install ghc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cómo compilar?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El código fuente del software escrito en Haskell tiene extension .hs\n",
+    "Para compilar un programa escrito en Haskell, cuyo código fuente se encuentra en hola.hs, por consola ejecutamos:\n",
+    "\n",
+    "$ ghc -o hola hola.hs\n",
+    "\n",
+    "Esto genera un ejecutable hola, que se inicia por consola de la siguiente forma:\n",
+    "\n",
+    "$ ./hola"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interprete: GHCi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ya instalado el GHC, podemos ejecutar el interprete via linea de comandos:\n",
+    "\n",
+    "$ ghci\n",
+    "\n",
+    "Esto permite ejecutar comandos en Haskell directamente, sin necesidad de tener el código en un archivo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -234,6 +332,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -258,6 +357,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -306,6 +406,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -350,6 +451,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1082,6 +1184,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1166,6 +1269,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1179,6 +1283,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1218,6 +1323,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1475,6 +1581,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1518,6 +1625,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1531,6 +1639,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1547,6 +1656,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1574,6 +1684,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1599,6 +1710,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1650,6 +1762,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1723,6 +1836,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1748,6 +1862,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1816,6 +1931,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2029,7 +2145,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sonIguales :: Eq a => a -> a -> String\n",
@@ -2280,6 +2398,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2314,6 +2433,7 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2377,6 +2497,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2438,6 +2559,7 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2614,6 +2736,7 @@
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2661,6 +2784,7 @@
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2701,6 +2825,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2733,6 +2858,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2781,6 +2907,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2876,6 +3003,7 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2924,6 +3052,7 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2996,6 +3125,7 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -3044,6 +3174,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -3059,6 +3190,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -3257,6 +3389,7 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -4086,6 +4219,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4232,6 +4366,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4397,6 +4532,7 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -4841,6 +4977,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -4909,6 +5046,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -4949,6 +5087,70 @@
    ],
    "source": [
     "chanExample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Caso de uso real : Sigma de Facebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sistema desarrollado en Haskell que detecta y elimina automaticamente mensajes de spam, links a malware, entre otras interacciones ofensivas. Se utiliza hace dos anos en haskell, y soporta 1 millon de consultas por segundo.\n",
+    "Este mismo trabajo lo habian desarrollado en un lenguaje que se llama FXL, es interno de facebook. Pero debido a la mala performance y a la lenta puesta en produccion de cambios, se decidio migrar todo el desarrollo a Haskell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sigma: reglas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cada interaccion debe pasar por una serie de reglas. Esas reglas toman en cuenta datos sobre cantidad de amigos, tematica del posteo, intereses de tus amigos, etc.\n",
+    "Aprovechando que Haskell es lazy, lo que se hace es evaluar las reglas excluyentes que sean mas simples de procesar primero, de tal forma de no realizar calculos en vano. Si la primer regla se cumple para que un posteo sea filtrado, y esa primer regla requeria poco procesamiento, se logra filtrar una interaccion de forma eficiente,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Por qué Haskell?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Tipado fuerte: se evitan errores en tiempo de ejecucion que el compilador puede detectar en tiempo de compilacion. Brinda mas seguridad.\n",
+    "- Lazy: se aprovecha esta propiedad de Haskell evaluando primero las reglas excluyentes que tengan menor tiempo de procesamiento, de tal forma de ahorrar recursos al no evaluar cada una de las reglas innecesariamente.\n",
+    "- Mejor rendimiento comparado con FXL.\n",
+    "- Concurrencia implicida: el desarrollador no debe preocuparse por manejar la concurrencia, sino que esta se aprovecha cuando es posible, dejando al desarrollador ocuparse solo de la implementacion de las reglas.\n",
+    "- Deploy de cambios en produccion en minutos, algo que FXL no brindaba. Ayuda a atacar avalancha de amenazas rapidamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Por que Haskell no es tan popular?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Es un lenguage creado para investigacion y desarrollo. Sirvio como base para otros lenguages funcionales. Nunca tuvo objetivo comercial/industrial.\n",
+    "- Nunca tuvo la banca de una gran compania. Es de gran ayuda que una empresa de renombre acompane el desarrollo del lenguaje, como paso con Go de google, u Objective-C o Swift en Apple. Algunas empresas, como Facebook, utilizan Haskell pero no en partes Core de su desarrollo, sino para aplicaciones auxiliares.\n",
+    "- Es funcional. Para comenzar a programar, normalmente se utiliza un lenguaje orientado a objetos, ademas de que se utiliza en gran porcentaje en la industria. Por lo cual, aprender Haskell no es como aprender un lenguaje mas, sino que requiere entender un paradigma que es totalmente diferente. Mas alla de que Haskell sea un lenguaje sencillo, aprender/entender el paradigma funcional es lo que hace que la curva de aprendizaje al principio sea de lento crecimiento."
    ]
   },
   {
