Pongo algunas tildes y eñes que faltaban

--- a/informe.ipynb
+++ b/informe.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "En 1987 se realizo una reunion con el objetivo de discutir la desafortunada situación que atravesaba la comunidad de lenguajes de programación funcional: existı́a más de una docena de lenguajes puros y no estrictos, todos muy similares en poder expresivo y semántico, y el uso más extenso de esta clase de lenguajes estaba siendo obstaculizado por la carencia de un lenguaje común.\n",
     "\n",
-    "Lo primerofue establecer los siguientes objetivos para el lenguaje:\n",
+    "Lo primero fue establecer los siguientes objetivos para el lenguaje:\n",
     "- Debı́a ser adecuado para la enseñanza, la investigación y el desarrollo de grandes aplicaciones.\n",
     "- Debı́a ser completamente descripto a través de la publicación de una sintaxis formal y una semántica.\n",
     "- Debı́a ser disponible libremente. Debı́a permitirse que cualquier persona pudiera implementar el lenguaje y distribuirlo a quien quisiera.\n",
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ sudo apt-get install ghc"
+    "`sudo apt-get install ghc`"
    ]
   },
   {
@@ -73,11 +73,11 @@
     "El código fuente del software escrito en Haskell tiene extension .hs\n",
     "Para compilar un programa escrito en Haskell, cuyo código fuente se encuentra en hola.hs, por consola ejecutamos:\n",
     "\n",
-    "$ ghc -o hola hola.hs\n",
+    "`ghc -o hola hola.hs`\n",
     "\n",
     "Esto genera un ejecutable hola, que se inicia por consola de la siguiente forma:\n",
     "\n",
-    "$ ./hola"
+    "`./hola`"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "Ya instalado el GHC, podemos ejecutar el interprete via linea de comandos:\n",
     "\n",
-    "$ ghci\n",
+    "`ghci`\n",
     "\n",
     "Esto permite ejecutar comandos en Haskell directamente, sin necesidad de tener el código en un archivo."
    ]
@@ -157,8 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-21T17:05:27.154629Z",
+     "start_time": "2018-06-21T17:05:25.894Z"
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -5100,8 +5104,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sistema desarrollado en Haskell que detecta y elimina automaticamente mensajes de spam, links a malware, entre otras interacciones ofensivas. Se utiliza hace dos anos en haskell, y soporta 1 millon de consultas por segundo.\n",
-    "Este mismo trabajo lo habian desarrollado en un lenguaje que se llama FXL, es interno de facebook. Pero debido a la mala performance y a la lenta puesta en produccion de cambios, se decidio migrar todo el desarrollo a Haskell."
+    "Sistema desarrollado en Haskell que detecta y elimina automáticamente mensajes de spam, links a malware, entre otras interacciones ofensivas. Se utiliza hace dos años en Haskell, y soporta 1 millón de consultas por segundo.\n",
+    "Este mismo trabajo lo habían desarrollado en un lenguaje que se llama FXL, es interno de Facebook. Pero debido a la mala performance y a la lenta puesta en producción de cambios, se decidió migrar todo el desarrollo a Haskell."
    ]
   },
   {
@@ -5115,8 +5119,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cada interaccion debe pasar por una serie de reglas. Esas reglas toman en cuenta datos sobre cantidad de amigos, tematica del posteo, intereses de tus amigos, etc.\n",
-    "Aprovechando que Haskell es lazy, lo que se hace es evaluar las reglas excluyentes que sean mas simples de procesar primero, de tal forma de no realizar calculos en vano. Si la primer regla se cumple para que un posteo sea filtrado, y esa primer regla requeria poco procesamiento, se logra filtrar una interaccion de forma eficiente,"
+    "Cada interacción debe pasar por una serie de reglas. Esas reglas toman en cuenta datos sobre cantidad de amigos, temática del posteo, intereses de tus amigos, etc.\n",
+    "Aprovechando que Haskell es lazy, lo que se hace es evaluar las reglas excluyentes que sean mas simples de procesar primero, de tal forma de no realizar cálculos en vano. Si la primera regla se cumple para que un posteo sea filtrado, y esa primera regla requería poco procesamiento, se logra filtrar una interacción de forma eficiente."
    ]
   },
   {
@@ -5130,11 +5134,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Tipado fuerte: se evitan errores en tiempo de ejecucion que el compilador puede detectar en tiempo de compilacion. Brinda mas seguridad.\n",
+    "- Tipado fuerte: se evitan errores en tiempo de ejecución que el compilador puede detectar en tiempo de compilación. Brinda mas seguridad.\n",
     "- Lazy: se aprovecha esta propiedad de Haskell evaluando primero las reglas excluyentes que tengan menor tiempo de procesamiento, de tal forma de ahorrar recursos al no evaluar cada una de las reglas innecesariamente.\n",
     "- Mejor rendimiento comparado con FXL.\n",
     "- Concurrencia implicida: el desarrollador no debe preocuparse por manejar la concurrencia, sino que esta se aprovecha cuando es posible, dejando al desarrollador ocuparse solo de la implementacion de las reglas.\n",
-    "- Deploy de cambios en produccion en minutos, algo que FXL no brindaba. Ayuda a atacar avalancha de amenazas rapidamente."
+    "- Deploy de cambios en producción en minutos, algo que FXL no brindaba. Ayuda a atacar avalancha de amenazas rapidamente."
    ]
   },
   {
@@ -5148,9 +5152,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Es un lenguage creado para investigacion y desarrollo. Sirvio como base para otros lenguages funcionales. Nunca tuvo objetivo comercial/industrial.\n",
-    "- Nunca tuvo la banca de una gran compania. Es de gran ayuda que una empresa de renombre acompane el desarrollo del lenguaje, como paso con Go de google, u Objective-C o Swift en Apple. Algunas empresas, como Facebook, utilizan Haskell pero no en partes Core de su desarrollo, sino para aplicaciones auxiliares.\n",
-    "- Es funcional. Para comenzar a programar, normalmente se utiliza un lenguaje orientado a objetos, ademas de que se utiliza en gran porcentaje en la industria. Por lo cual, aprender Haskell no es como aprender un lenguaje mas, sino que requiere entender un paradigma que es totalmente diferente. Mas alla de que Haskell sea un lenguaje sencillo, aprender/entender el paradigma funcional es lo que hace que la curva de aprendizaje al principio sea de lento crecimiento."
+    "- Es un lenguage creado para investigacion y desarrollo. Sirvió como base para otros lenguages funcionales. Nunca tuvo objetivo comercial/industrial.\n",
+    "- Nunca tuvo la banca de una gran compañía. Es de gran ayuda que una empresa de renombre acompañe el desarrollo del lenguaje, como paso con Go de google, u Objective-C o Swift en Apple. Algunas empresas, como Facebook, utilizan Haskell pero no en partes Core de su desarrollo, sino para aplicaciones auxiliares.\n",
+    "- Es funcional. Para comenzar a programar, normalmente se utiliza un lenguaje orientado a objetos, además de que se utiliza en gran porcentaje en la industria. Por lo cual, aprender Haskell no es como aprender un lenguaje más, sino que requiere entender un paradigma que es totalmente diferente. Más allá de que Haskell sea un lenguaje sencillo, aprender/entender el paradigma funcional es lo que hace que la curva de aprendizaje al principio sea de lento crecimiento."
    ]
   },
   {
